# claude-mini

./: .gitignore  .mini.example  AGENT.md  README.md  pyproject.toml
docs/: mindmap-project-structure.md  mindmap-request-flow.md
src/mini_agent/: __init__.py  config.py  types.py
src/mini_agent/api/: __init__.py  anthropic_provider.py  base.py  client.py  openai_provider.py
src/mini_agent/cli/: main.py
src/mini_agent/context/: __init__.py  builder.py
src/mini_agent/engine/: __init__.py  engine.py
src/mini_agent/loop/: __init__.py  loop.py
src/mini_agent/permissions/: __init__.py  manager.py
src/mini_agent/tools/: __init__.py  base.py  bash.py  file_edit.py  file_read.py  file_write.py  glob.py  grep.py
