[project]
name = "mini-agent"
version = "0.2.0"
description = "A minimal AI Agent framework inspired by Claude Code architecture — multi-model support"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.39.0",
    "openai>=1.40.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5.0",
]

[project.scripts]
mini-agent = "mini_agent.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mini_agent"]

[tool.ruff]
target-version = "py310"
line-length = 100
